objects/xdo_dc_Timeline_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Days_Ago__c</fullName>
        <label>Days Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Use this field to sort events on the same day. Component sorts events by Order value in DESC</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>Created Date</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <inlineHelpText>Description of activity, displays under title</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>icon__c</fullName>
        <description>The Lightning Design System name of the icon. Names are written in the format &apos;utility:down&apos; where &apos;utility&apos; is the category, and &apos;down&apos; is the specific icon to be displayed.</description>
        <inlineHelpText>The Lightning Design System name of the icon. Names are written in the format &apos;utility:down&apos; where &apos;utility&apos; is the category, and &apos;down&apos; is the specific icon to be displayed.</inlineHelpText>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>related_to__c</fullName>
        <inlineHelpText>Id of the object to which this activity is related</inlineHelpText>
        <label>Related To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stream_hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stream Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <inlineHelpText>Title of activity, displays under title</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Timeline Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>title__c</columns>
        <columns>description__c</columns>
        <columns>Days_Ago__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Timeline Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>